--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.daedalusmedia.retrofitcoroutinelivedata">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.daedalusmedia.retrofitcoroutinelivedata"
+  tools:ignore="GoogleAppIndexingWarning">
 
   <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,14 +13,16 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".rockets.RocketsActivity"></activity>
+    <activity android:name=".landingpads.LandingPadActivity" />
+    <activity android:name=".rockets.RocketsActivity" />
+
     <activity android:name=".MainMenuActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+
   </application>
 
 </manifest>
